Fix incorrect text alignment on nav above header layout

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -310,6 +310,9 @@ header
       max-width: 100% !important
       text-align: left
 
+      .header-home-link
+        text-align: left
+
 .header-home-link
   +fluid-type(24px, 64px)
   color: $primary-text-color
